--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
