bug fix attempt

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,8 @@
   "dependencies": {
     "antd": "^5.21.6",
     "next": "15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "19.0.0-rc-33c7bd9a-20241104",
+    "react-dom": "19.0.0-rc-33c7bd9a-20241104"
   },
   "devDependencies": {
     "@types/node": "^20",
